# locoman_utils

./: CMakeLists.txt  locoman_utils.kdev4
.kdev4/: locoman_utils.kdev4
include/locoman/utils/: algebra.hpp  declarations.h  kinematics.hpp  kinetostatics.hpp  locoman_utils.hpp  screws.hpp  st_transformations.hpp
src/: declarations.cpp  locoman_utils.cpp  utils.cpp
